# InfernapeXavier

./: .gitignore  CLAUDE.md  CODENOTIFY  README.md
.github/: SETUP.md
.github/scripts/: fetch_anilist.py  fetch_carbonara.py  fetch_spotify.py  generate_readme.py  pyproject.toml  spotify_auth.py
.github/workflows/: codenotify.yml  main.yml  metrics.yml  metrics.yml.disabled  update-profile.yml
data/: anilist.json  spotify.json
