[project]
name = "profile-updater"
version = "0.1.0"
description = "Updates GitHub profile with AniList and Spotify data"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PIE", "SIM", "RUF"]
ignore = ["S101", "S105"]  # Allow assert statements, ignore hardcoded password false positives

[tool.ruff.format]
quote-style = "double"
indent-style = "space"